--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <link href='styles/styles.css' rel='stylesheet' />
     <link href='styles/Outlook Icons/style.css' rel='stylesheet' />
     <link href='styles/css/outlook.css' rel='stylesheet' />
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/core-js/2.4.1/shim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/reflect-metadata/0.1.10/Reflect.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/zone.js/0.8.18/zone.min.js"></script>
     <script type="text/javascript">
         if (/MSIE \d|Trident.*rv:/.test(navigator.userAgent)) {
             document.write('<script src="https://cdnjs.cloudflare.com/ajax/libs/bluebird/3.3.5/bluebird.min.js"><\/script>');
