--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Essential JS 2 for TypeScript - Webmail</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
-    <meta name="description" content="Essential JS 2 for TypeScript - Webmail" />
+    <meta name="description" content="Essential JS 2 for TypeScript - Webmail - This demo explores a mailbox user interface which was inspired by the Outlook Office 365 application" />
     <meta name="author" content="Syncfusion" />
     <link rel="shortcut icon" href="favicon.ico" />
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" />
@@ -19,7 +19,7 @@
             document.write('<script src="https://cdnjs.cloudflare.com/ajax/libs/bluebird/3.3.5/bluebird.min.js"><\/script>');
         }
     </script> 
-    <script src='dist/common.js' type='text/javascript'></script>
+   
 </head>
 
 <body>
@@ -31,7 +31,7 @@
                         <span class='ej-icon-Bento' style='font-size: 18px;'></span>
                     </div>
                     <div style='margin-left: 15px;display: inline-block'>
-                        <span class='home-btn-text'>Webmail</span>
+                        <h1 class='home-btn-text'>Webmail</h1>
                     </div>
                 </div>
                 <div style="display: table-cell; width: 100%; text-align: center">
@@ -64,5 +64,6 @@
         <div id="content-area" style="height: 100%">
         </div>
     </div>
+    <script src='dist/common.js' type='text/javascript'></script>
 </body>
 </html>
