Rendered Components - Appbar, SideBar, Avatar, Splitter, Mention.

--- a/src/home/newmail.html
+++ b/src/home/newmail.html
@@ -14,10 +14,12 @@
         <input type='text' id='autoCc' />
     </div>
     <div class="mail-subject e-input-group">
-        <input type='text' id='txtSubject' style="width: 100%" placeholder="Enter Subject Here" class = "e-input"/>
+        <input type='text' id='txtSubject' style="width: 100%" placeholder="Enter Subject Here" class="e-input" />
     </div>
     <div>
-        <div id='mailContentMessage' class="customScrollBar" contenteditable="true"></div>
+        <div id="mentionElement" style="height: 100%; width: 100%;">
+            <div id='mailContentMessage' class="customScrollBar" contenteditable="true"></div>
+        </div>
     </div>
     <div class='mail-text-edit-tb-parent'>
         <div id='new_email_toolbar'>
@@ -28,4 +30,3 @@
         <button id='btnDiscard' style='margin: 8px 0px;'>Discard</button>
     </div>
 </div>
-
