Rendered Components - AppBar, Sidebar, Avatar, Splitter, Mention.

--- a/src/home/newmail.html
+++ b/src/home/newmail.html
@@ -17,8 +17,7 @@
         <input type='text' id='txtSubject' style="width: 100%" placeholder="Enter Subject Here" class="e-input" />
     </div>
     <div>
-        <div id="mentionElement" style="height: 100%; width: 100%;">
-            <div id='mailContentMessage' class="customScrollBar" contenteditable="true"></div>
+        <div id="mentionElement" style="border: 1px solid #D7D7D7; border-radius: 4px; padding: 8px; font-size: 14px;  height: 100%; width: 100%;">
         </div>
     </div>
     <div class='mail-text-edit-tb-parent'>
