feature (EJ2-67545): Review Changes done.

--- a/src/home/newmail.html
+++ b/src/home/newmail.html
@@ -14,11 +14,10 @@
         <input type='text' id='autoCc' />
     </div>
     <div class="mail-subject e-input-group">
-        <input type='text' id='txtSubject' style="width: 100%" placeholder="Enter Subject Here" class="e-input" />
+        <input type='text' id='txtSubject' style="width: 100%" placeholder="Enter Subject Here" class = "e-input"/>
     </div>
     <div>
-        <div id="mentionElement" style="border: 1px solid #D7D7D7; border-radius: 4px; padding: 8px; font-size: 14px;  height: 100%; width: 100%;">
-        </div>
+        <div id='mailContentMessage' class="customScrollBar" contenteditable="true"></div>
     </div>
     <div class='mail-text-edit-tb-parent'>
         <div id='new_email_toolbar'>
@@ -29,3 +28,4 @@
         <button id='btnDiscard' style='margin: 8px 0px;'>Discard</button>
     </div>
 </div>
+
