--- a/src/home/home.html
+++ b/src/home/home.html
@@ -1,6 +1,5 @@
 <div class='row content'>
-    <div class="headerContent"
-        style="z-index: 112; height: 100%; background-color: #f4f4f4; width: 330px;right:0; position: absolute">
+    <div class="headerContent" style="z-index: 112; height: 100%; background-color: #f4f4f4; width: 330px;right:0; position: absolute">
         <div style="right:20px;position: absolute; top: 35px">
             <button id='btnCloseButton'></button>
         </div>
@@ -120,19 +119,14 @@
                 <div id='toolbar_mobile'>
                 </div>
             </div>
-            <div id="splitter">
-                <div id="splitter-left-pane" style="position: relative;"></div>
-                <div id="splitter-right-pane" style="position: relative;"></div>
-            </div>
-            <div class='maincontent_pane'
-                style='background-color:#fff; width:100%;height:calc(100% - 40px);color:white'>
-
+            <div class='maincontent_pane' style='background-color:#f4f9fd; width:100%;height:100%;color:white'>
+            <div id="splitter"></div>
                 <div id="list-pane-div" class='message-pane customScrollBar' style='overflow: auto'>
                     <div class="filter-section">
                         <div style='float: left; margin-top: 5px;'>
                             <span id="spanFilterText" style='font-size: 22px;color:#333333'>Inbox</span>
                         </div>
-                        <div style='right:25px; position: absolute; top:15px'>
+                        <div style='right:25px; position: absolute; top:10px'>
                             <span style='font-size: 16px; color: #0078D7'>Filter</span>
                             <button id='btnFilter' style='color: #0078D7'></button>
                         </div>
@@ -140,11 +134,10 @@
                     <div id='listview-grp' tabindex='1'></div>
                 </div>
                 <div id='reading-pane-div' class='reading-pane customScrollBar'>
-                    <div id='emptyMessageDiv'
-                        style='width: 100%;text-align: center; vertical-align: middle; padding: 15px;height:100%; background-color:#fff;'>
+                    <div id='emptyMessageDiv' style='width: 100%;text-align: center; vertical-align: middle; padding: 15px;height:100%; background-color:#fff;'>
                         <div style="top:35%; left: 40%; position: absolute; display: block">
                             <div class="emptyImageDiv"></div>
-                            <br />
+                            <br/>
                             <span class="emptyDivText">Choose a message to read it.</span>
                         </div>
                     </div>
@@ -152,10 +145,10 @@
                     <div id='mailarea' style='display: none; height:100%; background-color:#fff;'>
                     </div>
                     <div id="newmailContent">
+
                     </div>
                 </div>
             </div>
-
         </div>
     </div>
     <div id='accodianContent' style='display: none'>
@@ -167,6 +160,7 @@
                 <div id='to' style="font-size: 12px;"></div>
             </div>
             <div style="right:0;position: absolute;">
+
             </div>
         </div>
         <div id='accContent'>
@@ -200,8 +194,7 @@
 <div id="discardNewWindow">
 </div>
 <div id="popup" style="position:absolute;width:320px">
-    <div id='popupContent'
-        style="padding:10px 10px; width: 320px; height: 85px; background-color:#F2F2F2; color:#252525">
+    <div id='popupContent' style="padding:10px 10px; width: 320px; height: 85px; background-color:#F2F2F2; color:#252525">
         <div style="float:left;pointer-events: none;">
             <div>
                 <div id='popup-image' class='logo logo-style1 popup-logo-style'></div>
@@ -209,15 +202,13 @@
         </div>
         <div style="left: 65px; top:5px; position: absolute;pointer-events: none;">
             <div style="margin-top: 2px">
-                <span id='popup-contact' class="popup-subjectstyle-text" style="font-size:16px;font-weight:bold">
-                    Richelle Mead </span>
+                <span id='popup-contact' class="popup-subjectstyle-text" style="font-size:16px;font-weight:bold"> Richelle Mead </span>
             </div>
             <div class="popup-subjectstyle">
                 <span id='popup-subject' class="popup-subjectstyle-text"> Networking Referral </span>
             </div>
             <div class="popup-subjectstyle">
-                <span id='popup-message-content' class="popup-subjectstyle-text"> Dear Kelly, I was being referred to
-                    you by George Peterson from ROYALES Company in New York. He was ...</span>
+                <span id='popup-message-content' class="popup-subjectstyle-text"> Dear Kelly, I was being referred to you by George Peterson from ROYALES Company in New York. He was ...</span>
             </div>
         </div>
         <div style="left:300px;position:absolute;font-size: 12px;">
