feature(EJ2-67545):Implemented Sidebar Component for HeaderContent.

--- a/src/home/home.html
+++ b/src/home/home.html
@@ -1,5 +1,5 @@
 <div class='row content'>
-    <div class="headerContent" style="z-index: 112; height: 100%; background-color: #f4f4f4; width: 330px;right:0; position: absolute">
+    <div id="headerSidebar">
         <div style="right:20px;position: absolute; top: 35px">
             <button id='btnCloseButton'></button>
         </div>
@@ -168,9 +168,6 @@
     </div>
     <div id='reading-pane-popup'>
 
-    </div>
-    <div class="overlay-element">
-    </div>
 </div>
 <ul id='treeContextMenu'></ul>
 <ul id='moveToMenuItems'></ul>
